sdlang.c

/* #line 1 "sdlang.rl" */
/*******************************************************************************
 * This .c file is generated by Ragel. Do not edit!
 *   $ ragel -L -G2 -o sdlang.c sdlang.rl
 ******************************************************************************/

#include "sdlang.h"

#include <stdio.h>


/* #line 128 "sdlang.rl" */



/* #line 18 "sdlang.c" */
static const int sdlang_start = 20;
static const int sdlang_error = 0;

static const int sdlang_en_c_comment = 1;
static const int sdlang_en_block = 22;
static const int sdlang_en_main = 20;


/* #line 131 "sdlang.rl" */

static void emit_token(const struct sdlang_token_t* token)
{
    fprintf(stdout, "[%2d] type=%d, value=", token->line, token->type);
    if (token->string.from < token->string.to)
    {
        fwrite(token->string.from, 1, token->string.to - token->string.from, stdout);
    }
    else
    {
        fprintf(stdout, "n/a");
    }
    fprintf(stdout, "\n");
}

void (*sdlang_emit_token)(const struct sdlang_token_t* token) = emit_token;

static void emit(enum sdlang_token_type_t type, const char* ts, const char* te, int line)
{
    switch (type)
    {
    case SDLANG_TOKEN_ATTRIBUTE:
        /* strip trailing '=' */
        --te;
        break;

    case SDLANG_TOKEN_INT32:
    case SDLANG_TOKEN_INT64:
    case SDLANG_TOKEN_INT128:
    case SDLANG_TOKEN_FLOAT32:
    case SDLANG_TOKEN_FLOAT64:
        /* strip leading '+' */
        if (*ts == '+')
        {
            ++ts;
        }
        break;

    case SDLANG_TOKEN_STRING:
    case SDLANG_TOKEN_BASE64:
        /* strip delimiters */
        ++ts;
        --te;
        break;

    default:
        break;
    }

    const struct sdlang_token_t token = {
        .type = type,
        .string = {
            .from = ts,
            .to = te
        },
        .line = line
    };

    (*sdlang_emit_token)(&token);
}

static void report_error(enum sdlang_error_t error, int line)
{
    switch (error)
    {
    case SDLANG_PARSE_ERROR:
        fprintf(stderr, "parse error at line %d\n", line);
        break;
    case SDLANG_PARSE_ERROR_STACK_OVERFLOW:
        fprintf(stderr, "parse stack overflow at line %d\n", line);
        break;
    case SDLANG_PARSE_ERROR_BUFFER_TOO_SMALL:
        fprintf(stderr, "out of buffer memory at line %d\n", line);
        break;
    default:
        fprintf(stderr, "unknown error [%d] at line %d\n", error, line);
        break;
    }
}

void (*sdlang_report_error)(enum sdlang_error_t error, int line) = report_error;

static void check_stack_size(char** p, char* pe, int top, int line)
{
    if (top == SDLANG_PARSE_STACKSIZE - 1)
    {
        /*
            trick the FSM into completing the current iteration,
            then the main loop checks for the stack pointer
        */
        *p = pe - 1;
    }
}

int sdlang_parse(size_t (*stream)(void* ptr, size_t size, size_t nmemb))
{
    char buf[SDLANG_PARSE_BUFFERSIZE];
    int cs, act, have = 0, curline = 1;
    int stack[SDLANG_PARSE_STACKSIZE], top = 0;
    char *ts, *te = 0;
    int done = 0, err = SDLANG_PARSE_OK;

    
/* #line 131 "sdlang.c" */
	{
	cs = sdlang_start;
	top = 0;
	ts = 0;
	te = 0;
	act = 0;
	}

/* #line 234 "sdlang.rl" */

    while (!done)
    {
        char *p = buf + have, *pe, *eof = 0;
        int len, space = SDLANG_PARSE_BUFFERSIZE - have;

        if (space == 0)
        {
            err = SDLANG_PARSE_ERROR_BUFFER_TOO_SMALL;
            break;
        }

        len = stream(p, 1, space);
        pe = p + len;

        if (len < space)
        {
            eof = pe;
            done = 1;
        }

        
/* #line 163 "sdlang.c" */
	{
	if ( p == pe )
		goto _test_eof;
	goto _resume;

_again:
	switch ( cs ) {
		case 20: goto st20;
		case 1: goto st1;
		case 2: goto st2;
		case 21: goto st21;
		case 0: goto st0;
		case 22: goto st22;
		case 3: goto st3;
		case 4: goto st4;
		case 5: goto st5;
		case 6: goto st6;
		case 7: goto st7;
		case 8: goto st8;
		case 9: goto st9;
		case 10: goto st10;
		case 23: goto st23;
		case 11: goto st11;
		case 12: goto st12;
		case 24: goto st24;
		case 25: goto st25;
		case 13: goto st13;
		case 14: goto st14;
		case 26: goto st26;
		case 15: goto st15;
		case 16: goto st16;
		case 27: goto st27;
		case 17: goto st17;
		case 18: goto st18;
		case 19: goto st19;
		case 28: goto st28;
		case 29: goto st29;
		case 30: goto st30;
		case 31: goto st31;
		case 32: goto st32;
		case 33: goto st33;
		case 34: goto st34;
		case 35: goto st35;
		case 36: goto st36;
		case 37: goto st37;
		case 38: goto st38;
		case 39: goto st39;
		case 40: goto st40;
	default: break;
	}

	if ( ++p == pe )
		goto _test_eof;
_resume:
	switch ( cs )
	{
tr31:
/* #line 125 "sdlang.rl" */
	{te = p+1;{p--; {
        check_stack_size(&p, pe, top, curline);
    {stack[top++] = 20; goto st22;}}}}
	goto st20;
st20:
/* #line 1 "NONE" */
	{ts = 0;}
	if ( ++p == pe )
		goto _test_eof20;
case 20:
/* #line 1 "NONE" */
	{ts = p;}
/* #line 234 "sdlang.c" */
	goto tr31;
tr1:
/* #line 20 "sdlang.rl" */
	{curline += 1;}
	goto st1;
st1:
/* #line 1 "NONE" */
	{ts = 0;}
	if ( ++p == pe )
		goto _test_eof1;
case 1:
/* #line 246 "sdlang.c" */
	switch( (*p) ) {
		case 10: goto tr1;
		case 42: goto st2;
	}
	goto st1;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	switch( (*p) ) {
		case 10: goto tr1;
		case 42: goto st2;
		case 47: goto tr3;
	}
	goto st1;
tr3:
/* #line 50 "sdlang.rl" */
	{{goto st22;}}
	goto st21;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
/* #line 270 "sdlang.c" */
	goto st0;
st0:
cs = 0;
	goto _out;
tr4:
/* #line 20 "sdlang.rl" */
	{curline += 1;}
/* #line 117 "sdlang.rl" */
	{te = p+1;{emit(SDLANG_TOKEN_NODE_END, NULL, NULL, curline);}}
	goto st22;
tr8:
/* #line 81 "sdlang.rl" */
	{te = p+1;{emit(SDLANG_TOKEN_STRING, ts, te, curline);}}
	goto st22;
tr11:
/* #line 20 "sdlang.rl" */
	{curline += 1;}
/* #line 113 "sdlang.rl" */
	{te = p+1;}
	goto st22;
tr19:
/* #line 1 "NONE" */
	{	switch( act ) {
	case 5:
	{{p = ((te))-1;}emit(SDLANG_TOKEN_FLOAT64, ts, te, curline);}
	break;
	case 8:
	{{p = ((te))-1;}emit(SDLANG_TOKEN_INT32, ts, te, curline);}
	break;
	case 9:
	{{p = ((te))-1;}emit(SDLANG_TOKEN_TRUE, ts, te, curline);}
	break;
	case 10:
	{{p = ((te))-1;}emit(SDLANG_TOKEN_FALSE, ts, te, curline);}
	break;
	case 11:
	{{p = ((te))-1;}emit(SDLANG_TOKEN_NULL, ts, te, curline);}
	break;
	}
	}
	goto st22;
tr22:
/* #line 88 "sdlang.rl" */
	{{p = ((te))-1;}{emit(SDLANG_TOKEN_INT32, ts, te, curline);}}
	goto st22;
tr25:
/* #line 87 "sdlang.rl" */
	{te = p+1;{emit(SDLANG_TOKEN_INT128, ts, te, curline);}}
	goto st22;
tr26:
/* #line 114 "sdlang.rl" */
	{te = p+1;{{goto st1;}}}
	goto st22;
tr28:
/* #line 95 "sdlang.rl" */
	{te = p+1;{emit(SDLANG_TOKEN_BASE64, ts, te, curline);}}
	goto st22;
tr29:
/* #line 20 "sdlang.rl" */
	{curline += 1;}
/* #line 116 "sdlang.rl" */
	{te = p+1;}
	goto st22;
tr32:
/* #line 119 "sdlang.rl" */
	{te = p+1;}
	goto st22;
tr37:
/* #line 101 "sdlang.rl" */
	{te = p+1;{emit(SDLANG_TOKEN_NODE_END, ts, te, curline);}}
	goto st22;
tr44:
/* #line 103 "sdlang.rl" */
	{te = p+1;{
            emit(SDLANG_TOKEN_BLOCK, ts, te, curline);
            {
        check_stack_size(&p, pe, top, curline);
    {stack[top++] = 22; goto st22;}}
        }}
	goto st22;
tr45:
/* #line 108 "sdlang.rl" */
	{te = p+1;{
            emit(SDLANG_TOKEN_BLOCK_END, ts, te, curline);
            {cs = stack[--top];goto _again;}
        }}
	goto st22;
tr46:
/* #line 84 "sdlang.rl" */
	{te = p;p--;{emit(SDLANG_TOKEN_FLOAT64, ts, te, curline);}}
	goto st22;
tr47:
/* #line 83 "sdlang.rl" */
	{te = p+1;{emit(SDLANG_TOKEN_FLOAT32, ts, te, curline);}}
	goto st22;
tr48:
/* #line 88 "sdlang.rl" */
	{te = p;p--;{emit(SDLANG_TOKEN_INT32, ts, te, curline);}}
	goto st22;
tr50:
/* #line 86 "sdlang.rl" */
	{te = p+1;{emit(SDLANG_TOKEN_INT64, ts, te, curline);}}
	goto st22;
tr51:
/* #line 79 "sdlang.rl" */
	{te = p;p--;{emit(SDLANG_TOKEN_NODE, ts, te, curline);}}
	goto st22;
tr52:
/* #line 77 "sdlang.rl" */
	{te = p+1;{emit(SDLANG_TOKEN_ATTRIBUTE, ts, te, curline);}}
	goto st22;
st22:
/* #line 1 "NONE" */
	{ts = 0;}
	if ( ++p == pe )
		goto _test_eof22;
case 22:
/* #line 1 "NONE" */
	{ts = p;}
/* #line 390 "sdlang.c" */
	switch( (*p) ) {
		case 9: goto tr32;
		case 10: goto tr4;
		case 13: goto st3;
		case 32: goto tr32;
		case 34: goto st4;
		case 35: goto st6;
		case 39: goto st7;
		case 43: goto st9;
		case 45: goto st15;
		case 46: goto st10;
		case 47: goto st16;
		case 48: goto tr16;
		case 59: goto tr37;
		case 91: goto st17;
		case 92: goto st18;
		case 96: goto st7;
		case 102: goto st28;
		case 110: goto st33;
		case 111: goto st36;
		case 116: goto st38;
		case 123: goto tr44;
		case 125: goto tr45;
	}
	if ( (*p) < 65 ) {
		if ( 49 <= (*p) && (*p) <= 57 )
			goto tr17;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st27;
	} else
		goto st27;
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) == 10 )
		goto tr4;
	goto st0;
tr7:
/* #line 20 "sdlang.rl" */
	{curline += 1;}
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
/* #line 439 "sdlang.c" */
	switch( (*p) ) {
		case 10: goto tr7;
		case 34: goto tr8;
		case 92: goto st5;
	}
	goto st4;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) == 10 )
		goto tr7;
	goto st4;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) == 10 )
		goto tr11;
	goto st6;
tr13:
/* #line 20 "sdlang.rl" */
	{curline += 1;}
	goto st7;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
/* #line 468 "sdlang.c" */
	switch( (*p) ) {
		case 10: goto tr13;
		case 39: goto tr8;
		case 92: goto st8;
		case 96: goto tr8;
	}
	goto st7;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) == 10 )
		goto tr13;
	goto st7;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	switch( (*p) ) {
		case 46: goto st10;
		case 48: goto tr16;
	}
	if ( 49 <= (*p) && (*p) <= 57 )
		goto tr17;
	goto st0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr18;
	goto st0;
tr18:
/* #line 1 "NONE" */
	{te = p+1;}
/* #line 84 "sdlang.rl" */
	{act = 5;}
	goto st23;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
/* #line 511 "sdlang.c" */
	switch( (*p) ) {
		case 69: goto st11;
		case 70: goto tr47;
		case 101: goto st11;
		case 102: goto tr47;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr18;
	goto tr46;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	switch( (*p) ) {
		case 43: goto st12;
		case 45: goto st12;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st24;
	goto tr19;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st24;
	goto tr19;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
	switch( (*p) ) {
		case 70: goto tr47;
		case 102: goto tr47;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st24;
	goto tr46;
tr16:
/* #line 1 "NONE" */
	{te = p+1;}
/* #line 88 "sdlang.rl" */
	{act = 8;}
	goto st25;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
/* #line 560 "sdlang.c" */
	switch( (*p) ) {
		case 46: goto tr18;
		case 66: goto st14;
		case 69: goto st11;
		case 76: goto tr50;
		case 98: goto st14;
		case 101: goto st11;
		case 108: goto tr50;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st13;
	goto tr48;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	switch( (*p) ) {
		case 46: goto tr18;
		case 69: goto st11;
		case 101: goto st11;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st13;
	goto tr22;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	switch( (*p) ) {
		case 68: goto tr25;
		case 100: goto tr25;
	}
	goto tr22;
tr17:
/* #line 1 "NONE" */
	{te = p+1;}
/* #line 88 "sdlang.rl" */
	{act = 8;}
	goto st26;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
/* #line 604 "sdlang.c" */
	switch( (*p) ) {
		case 46: goto tr18;
		case 66: goto st14;
		case 69: goto st11;
		case 76: goto tr50;
		case 98: goto st14;
		case 101: goto st11;
		case 108: goto tr50;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr17;
	goto tr48;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	switch( (*p) ) {
		case 45: goto st6;
		case 46: goto st10;
		case 48: goto tr16;
	}
	if ( 49 <= (*p) && (*p) <= 57 )
		goto tr17;
	goto st0;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
	switch( (*p) ) {
		case 42: goto tr26;
		case 47: goto st6;
	}
	goto st0;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
	switch( (*p) ) {
		case 36: goto st27;
		case 61: goto tr52;
		case 95: goto st27;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto st27;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st27;
		} else if ( (*p) >= 65 )
			goto st27;
	} else
		goto st27;
	goto tr51;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
	switch( (*p) ) {
		case 43: goto st17;
		case 61: goto st17;
		case 93: goto tr28;
	}
	if ( (*p) < 65 ) {
		if ( 47 <= (*p) && (*p) <= 57 )
			goto st17;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st17;
	} else
		goto st17;
	goto st0;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
	switch( (*p) ) {
		case 10: goto tr29;
		case 13: goto st19;
	}
	goto st0;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
	if ( (*p) == 10 )
		goto tr29;
	goto st0;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	switch( (*p) ) {
		case 36: goto st27;
		case 61: goto tr52;
		case 95: goto st27;
		case 97: goto st29;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto st27;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 90 ) {
			if ( 98 <= (*p) && (*p) <= 122 )
				goto st27;
		} else if ( (*p) >= 65 )
			goto st27;
	} else
		goto st27;
	goto tr51;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
	switch( (*p) ) {
		case 36: goto st27;
		case 61: goto tr52;
		case 95: goto st27;
		case 108: goto st30;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto st27;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st27;
		} else if ( (*p) >= 65 )
			goto st27;
	} else
		goto st27;
	goto tr51;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
	switch( (*p) ) {
		case 36: goto st27;
		case 61: goto tr52;
		case 95: goto st27;
		case 115: goto st31;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto st27;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st27;
		} else if ( (*p) >= 65 )
			goto st27;
	} else
		goto st27;
	goto tr51;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
	switch( (*p) ) {
		case 36: goto st27;
		case 61: goto tr52;
		case 95: goto st27;
		case 101: goto tr56;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto st27;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st27;
		} else if ( (*p) >= 65 )
			goto st27;
	} else
		goto st27;
	goto tr51;
tr56:
/* #line 1 "NONE" */
	{te = p+1;}
/* #line 91 "sdlang.rl" */
	{act = 10;}
	goto st32;
tr59:
/* #line 1 "NONE" */
	{te = p+1;}
/* #line 93 "sdlang.rl" */
	{act = 11;}
	goto st32;
tr61:
/* #line 1 "NONE" */
	{te = p+1;}
/* #line 90 "sdlang.rl" */
	{act = 9;}
	goto st32;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
/* #line 803 "sdlang.c" */
	switch( (*p) ) {
		case 36: goto st27;
		case 95: goto st27;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto st27;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st27;
		} else if ( (*p) >= 65 )
			goto st27;
	} else
		goto st27;
	goto tr19;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
	switch( (*p) ) {
		case 36: goto st27;
		case 61: goto tr52;
		case 95: goto st27;
		case 117: goto st34;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto st27;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st27;
		} else if ( (*p) >= 65 )
			goto st27;
	} else
		goto st27;
	goto tr51;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
	switch( (*p) ) {
		case 36: goto st27;
		case 61: goto tr52;
		case 95: goto st27;
		case 108: goto st35;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto st27;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st27;
		} else if ( (*p) >= 65 )
			goto st27;
	} else
		goto st27;
	goto tr51;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
	switch( (*p) ) {
		case 36: goto st27;
		case 61: goto tr52;
		case 95: goto st27;
		case 108: goto tr59;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto st27;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st27;
		} else if ( (*p) >= 65 )
			goto st27;
	} else
		goto st27;
	goto tr51;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
	switch( (*p) ) {
		case 36: goto st27;
		case 61: goto tr52;
		case 95: goto st27;
		case 102: goto st37;
		case 110: goto tr61;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto st27;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st27;
		} else if ( (*p) >= 65 )
			goto st27;
	} else
		goto st27;
	goto tr51;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
	switch( (*p) ) {
		case 36: goto st27;
		case 61: goto tr52;
		case 95: goto st27;
		case 102: goto tr56;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto st27;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st27;
		} else if ( (*p) >= 65 )
			goto st27;
	} else
		goto st27;
	goto tr51;
st38:
	if ( ++p == pe )
		goto _test_eof38;
case 38:
	switch( (*p) ) {
		case 36: goto st27;
		case 61: goto tr52;
		case 95: goto st27;
		case 114: goto st39;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto st27;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st27;
		} else if ( (*p) >= 65 )
			goto st27;
	} else
		goto st27;
	goto tr51;
st39:
	if ( ++p == pe )
		goto _test_eof39;
case 39:
	switch( (*p) ) {
		case 36: goto st27;
		case 61: goto tr52;
		case 95: goto st27;
		case 117: goto st40;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto st27;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st27;
		} else if ( (*p) >= 65 )
			goto st27;
	} else
		goto st27;
	goto tr51;
st40:
	if ( ++p == pe )
		goto _test_eof40;
case 40:
	switch( (*p) ) {
		case 36: goto st27;
		case 61: goto tr52;
		case 95: goto st27;
		case 101: goto tr61;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto st27;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st27;
		} else if ( (*p) >= 65 )
			goto st27;
	} else
		goto st27;
	goto tr51;
	}
	_test_eof20: cs = 20; goto _test_eof; 
	_test_eof1: cs = 1; goto _test_eof; 
	_test_eof2: cs = 2; goto _test_eof; 
	_test_eof21: cs = 21; goto _test_eof; 
	_test_eof22: cs = 22; goto _test_eof; 
	_test_eof3: cs = 3; goto _test_eof; 
	_test_eof4: cs = 4; goto _test_eof; 
	_test_eof5: cs = 5; goto _test_eof; 
	_test_eof6: cs = 6; goto _test_eof; 
	_test_eof7: cs = 7; goto _test_eof; 
	_test_eof8: cs = 8; goto _test_eof; 
	_test_eof9: cs = 9; goto _test_eof; 
	_test_eof10: cs = 10; goto _test_eof; 
	_test_eof23: cs = 23; goto _test_eof; 
	_test_eof11: cs = 11; goto _test_eof; 
	_test_eof12: cs = 12; goto _test_eof; 
	_test_eof24: cs = 24; goto _test_eof; 
	_test_eof25: cs = 25; goto _test_eof; 
	_test_eof13: cs = 13; goto _test_eof; 
	_test_eof14: cs = 14; goto _test_eof; 
	_test_eof26: cs = 26; goto _test_eof; 
	_test_eof15: cs = 15; goto _test_eof; 
	_test_eof16: cs = 16; goto _test_eof; 
	_test_eof27: cs = 27; goto _test_eof; 
	_test_eof17: cs = 17; goto _test_eof; 
	_test_eof18: cs = 18; goto _test_eof; 
	_test_eof19: cs = 19; goto _test_eof; 
	_test_eof28: cs = 28; goto _test_eof; 
	_test_eof29: cs = 29; goto _test_eof; 
	_test_eof30: cs = 30; goto _test_eof; 
	_test_eof31: cs = 31; goto _test_eof; 
	_test_eof32: cs = 32; goto _test_eof; 
	_test_eof33: cs = 33; goto _test_eof; 
	_test_eof34: cs = 34; goto _test_eof; 
	_test_eof35: cs = 35; goto _test_eof; 
	_test_eof36: cs = 36; goto _test_eof; 
	_test_eof37: cs = 37; goto _test_eof; 
